--- a/vignettes_html/Introduction_R.html
+++ b/vignettes_html/Introduction_R.html
@@ -225,10 +225,10 @@ use it through the fantastic software
 <a href="http://www.rstudio.com/">RStudio</a>. With this package, there is no
 noticeable difference between the operation system you are using.</p>
 
-<p>As advertised on the website, <code>_RStudio is an integrated development
+<p>As advertised on the website, <em>RStudio is an integrated development
 environment (IDE) for R. It includes a console, syntax-highlighting
 editor that supports direct code execution, as well as tools for
-plotting, history, debugging and workspace management_</code>. In another
+plotting, history, debugging and workspace management</em>. In another
 words, it offers a number of facilities for your convenience that will
 make your live easier, specially if you never use R before.</p>
 
@@ -363,10 +363,6 @@ right, select <strong>Packages</strong>, then <strong>Install</strong> and final
 <p>Returning to the console, you need to load <em>OneMap</em> by typing:</p>
 
 <pre><code class="r">library(onemap)
-</code></pre>
-
-<pre><code>## Loading required package: tcltk
-## Loading required package: tkrplot
 </code></pre>
 
 <p>Some Linux users reported the error message below:</p>
